Fix overflow

--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@ body {
   background-color: black;
   color: white;
   font-family: sans-serif;
-  overflow: hidden;
 }
 
 a {
